增加缓存时间设置

--- a/service/campus/campus.webapp/src/main/webapp/WEB-INF/log4j/log4j.properties
+++ b/service/campus/campus.webapp/src/main/webapp/WEB-INF/log4j/log4j.properties
@@ -8,9 +8,7 @@ log4j.appender.dailyFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailyFile.Threshold=INFO 
 log4j.appender.dailyFile.ImmediateFlush=true
 log4j.appender.dailyFile.Append=true
-log4j.appender.dailyFile.File=/log/campus.log
+log4j.appender.dailyFile.File=${webApp.root}/log/campus.log
 log4j.appender.dailyFile.DatePattern='.'yyyy-MM-dd
 log4j.appender.dailyFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.dailyFile.layout.ConversionPattern=%d-[HX] %p %t %c - %m%n
-
-log4j.logger.org.huaxing.mapper.LeaveReasonMapper=TRACE
+log4j.appender.dailyFile.layout.ConversionPattern=%d-[CAMPUS] %p %t %c - %m%n
