--- a/service/campus/campus.webapp/src/main/webapp/WEB-INF/web.xml
+++ b/service/campus/campus.webapp/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
 
 	<!-- log4j配置 Begin -->
 	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>webApp.root</param-value>
+	</context-param>
+	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>WEB-INF/log4j/log4j.properties</param-value>
 	</context-param>
