--- a/service/campus/campus.rest/src/main/resources/db.properties
+++ b/service/campus/campus.rest/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #mysql settings
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://127.0.0.1:3306/campus
-db.userName=root
-db.password=root
+db.userName=campus
+db.password=campus123
 db.initialSize=10
 db.maxActive=100
 db.maxIdle=20
