--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -1,2 +1,8 @@
+#MD5加密
 password_md5_key=JinGuaizhang
 password_md5_charset=UTF-8
+#Http请求编码
+SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
+SMS_REQUEST_CHARSET=UTF-8
+SMS_USER_NAME=uyoung
+SMS_USER_PWD=123
