--- a/service/campus/campus.rest/pom.xml
+++ b/service/campus/campus.rest/pom.xml
@@ -126,6 +126,16 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.5</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.3</version>
+		</dependency>
 	</dependencies>
 
 </project>
