--- a/service/campus/campus.rest/pom.xml
+++ b/service/campus/campus.rest/pom.xml
@@ -136,6 +136,11 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
