--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -5,4 +5,4 @@ password_md5_charset=UTF-8
 SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=UTF-8
 SMS_USER_NAME=uyoung
-SMS_USER_PWD=123
+SMS_USER_PWD=nj123456
