--- a/service/campus/campus.rest/pom.xml
+++ b/service/campus/campus.rest/pom.xml
@@ -141,6 +141,16 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.0.5.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>4.0.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 </project>
