增加短信验证码功能

--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -1,10 +1,13 @@
-#MD5加密
+#MD5\u52a0\u5bc6
 password_md5_key=JinGuaizhang
 password_md5_charset=UTF-8
-#Http请求编码
+
+#Http\u8bf7\u6c42\u7f16\u7801
 SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=GBK
 SMS_USER_NAME=uyoung
 SMS_USER_PWD=nj123456
-#默认编码
+SMS_CHECK_CODE_TEMPLATE = \u5c0a\u656c\u7684\u7528\u6237\uff0c\u60a8\u7684\u9a8c\u8bc1\u7801\u4e3a\uff1a%s\uff0c\u8bf7\u53ca\u65f6\u8f93\u5165\u3002\u3010\u96c6\u5408\u3011
+
+#\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
