--- a/service/campus/campus.rest/pom.xml
+++ b/service/campus/campus.rest/pom.xml
@@ -151,6 +151,9 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>4.0.5.RELEASE</version>
 		</dependency>
-	</dependencies>
-
+		<dependency>
+		   <groupId>org.imgscalr</groupId>
+	       <artifactId>imgscalr-lib</artifactId>
+	       <version>4.2</version></dependency>
+	    </dependencies>
 </project>
