--- a/service/campus/campus.rest/src/main/resources/exception.properties
+++ b/service/campus/campus.rest/src/main/resources/exception.properties
@@ -1,6 +1,7 @@
-1000001=未登录
-1000002=登录失败
+1000001=æªç»å½
+1000002=ç»å½å¤±è´¥
+100010=系统异常
+1100001=éªè¯ç çæå¤±è´¥
 
-1100001=验证码生成失败
-
-1200001=短信发送失败
+1200001=ç­ä¿¡åéå¤±è´¥
+1800001=文件id不存在
