--- a/service/campus/campus.webapp/pom.xml
+++ b/service/campus/campus.webapp/pom.xml
@@ -22,5 +22,15 @@
 			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
-
+   <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					<warName>campus</warName>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
