去掉一些垃圾代码

--- a/service/campus/campus.rest/src/main/resources/fastdfs.properties
+++ b/service/campus/campus.rest/src/main/resources/fastdfs.properties
@@ -1,10 +1,10 @@
-####fastDFS相关配置
+####fastDFS\u76f8\u5173\u914d\u7f6e
 fdfs.connect_timeout=5
 fdfs.network_timeout=30
 #fdfs.tracker_server=172.16.129.26:22122
 fdfs.tracker_server=10.207.184.49:22122
 
-####fastDHT相关配置
+####fastDHT\u76f8\u5173\u914d\u7f6e
 fdht.network_timeout = 30
 fdht.charset = utf-8
 
