--- a/service/campus/campus.rest/src/main/resources/exception.properties
+++ b/service/campus/campus.rest/src/main/resources/exception.properties
@@ -5,4 +5,7 @@
 
 1200001=短信发送失败
 1800001=文件id不存在
-
+1900001=系统异常，用户id丢失
+1900002=类型错误，消息类型(0:系统公告;1:普通用户信息)
+1900003=类型错误，是否已读(0:未读;1:已读)
+1900004=参数错误，请检查rest接口参数传递规范
