--- a/service/campus/campus.webapp/src/main/webapp/WEB-INF/web.xml
+++ b/service/campus/campus.webapp/src/main/webapp/WEB-INF/web.xml
@@ -62,4 +62,9 @@
 	</servlet-mapping>
 	<!-- SpringMVC配置 END -->
 
+	<!-- session超时设置，单位为分钟，-1为不超时 -->
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+
 </web-app>
