审帖发帖积分计算

--- a/service/campus/campus.rest/src/main/resources/integral.properties
+++ b/service/campus/campus.rest/src/main/resources/integral.properties
@@ -6,3 +6,7 @@ EVERYDAY_INCREASE_INTEGRAL=5
 LOGIN_CALC_CYCLE=7
 #发帖审核后积分
 POSTS_PASS_CHECK=20
+#审帖 每日获取积分的审帖个数上限
+CHECK_POSTS_UPPER_LIMIT=10
+#每个审帖获取的积分
+CHECK_POST_GET_INTEGRAL=2
