--- a/service/campus/campus.rest/src/main/resources/api.properties
+++ b/service/campus/campus.rest/src/main/resources/api.properties
@@ -1,4 +1,13 @@
+##微信认证登录
 WEIXIN_USERINFO_URL=https://api.weixin.qq.com/sns/userinfo
 WEIXIN_APPID=
 WEIXIN_SECRET=
 WEIXIN_TOKEN_URL=https://api.weixin.qq.com/cgi-bin/token
+
+##QQ认证登录
+QQ_USERINFO_URL=https://graph.qq.com/user/get_user_info
+QQ_CLIENT_ID=
+QQ_CLIENT_SECRET=
+QQ_CONSUMER_KEY=
+QQ_TOKEN_URL=https://graph.z.qq.com/moc2/token
+QQ_OPENID_URL=https://graph.z.qq.com/moc2/me
