--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -12,3 +12,4 @@ SMS_CHECK_CODE_TEMPLATE = \u5C0A\u656C\u7684\u7528\u6237\uFF0C\u60A8\u7684\u9A8C
 #\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
 DEFAULT_NICK_NAME=\u5E97\u5C0F\u4E8C
+LOGIN_FAILED_NEED_VERIFY_CODE=3
