--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -7,9 +7,9 @@ SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=GBK
 SMS_USER_NAME=uyoung
 SMS_USER_PWD=nj123456
-SMS_CHECK_CODE_TEMPLATE = \u5C0A\u656C\u7684\u7528\u6237\uFF0C\u60A8\u7684\u9A8C\u8BC1\u7801\u4E3A\uFF1A%s\uFF0C\u8BF7\u53CA\u65F6\u8F93\u5165\u3002\u3010\u96C6\u5408\u3011
+SMS_CHECK_CODE_TEMPLATE = 尊敬的用户，您的验证码为：%s，请及时输入。【集合】
 
 #\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
-DEFAULT_NICK_NAME=\u5E97\u5C0F\u4E8C
+DEFAULT_NICK_NAME=店小二
 LOGIN_FAILED_NEED_VERIFY_CODE=3
