--- a/service/campus/campus.rest/src/main/resources/api.properties
+++ b/service/campus/campus.rest/src/main/resources/api.properties
@@ -6,8 +6,8 @@ WEIXIN_TOKEN_URL=https://api.weixin.qq.com/cgi-bin/token
 
 ##QQ认证登录
 QQ_USERINFO_URL=https://graph.qq.com/user/get_user_info
-QQ_CLIENT_ID=
-QQ_CLIENT_SECRET=
+QQ_CLIENT_ID=1104832922
+QQ_CLIENT_SECRET=QUr5coLFha15ecBa
 QQ_TOKEN_URL=https://graph.z.qq.com/moc2/token
 QQ_OPENID_URL=https://graph.z.qq.com/moc2/me
 
