--- a/service/campus/campus.rest/src/main/resources/api.properties
+++ b/service/campus/campus.rest/src/main/resources/api.properties
@@ -1,7 +1,7 @@
 ##微信认证登录
 WEIXIN_USERINFO_URL=https://api.weixin.qq.com/sns/userinfo
-WEIXIN_APPID=
-WEIXIN_SECRET=
+WEIXIN_APPID=wx5e73a43b54725817
+WEIXIN_SECRET=be68c0f146844046daec3e2466218c5e
 WEIXIN_TOKEN_URL=https://api.weixin.qq.com/cgi-bin/token
 
 ##QQ认证登录
@@ -12,8 +12,8 @@ QQ_TOKEN_URL=https://graph.z.qq.com/moc2/token
 QQ_OPENID_URL=https://graph.z.qq.com/moc2/me
 
 ##Weibo认证登录
-WEIBO_CLIENT_ID=
-WEIBO_CLIENT_SECRET=
+WEIBO_CLIENT_ID=1046869626
+WEIBO_CLIENT_SECRET=be80985cba1077ca7023716eb296d15e
 WEIBO_TOKEN_URL=https://api.weibo.com/oauth2/access_token
 WEIBO_UID_URL=https://api.weibo.com/2/account/get_uid.json
 WEIBO_USERINFO_URL=https://api.weibo.com/2/users/show.json
