--- a/service/campus/campus.rest/src/main/resources/integral.properties
+++ b/service/campus/campus.rest/src/main/resources/integral.properties
@@ -10,3 +10,10 @@ POSTS_PASS_CHECK=20
 CHECK_POSTS_UPPER_LIMIT=10
 #每个审帖获取的积分
 CHECK_POST_GET_INTEGRAL=2
+#评论计算积分天数
+COMMENT_DAYS=3
+COMMENT_POST_GET_INTEGRAL=2
+COMMENT_POST_ONE_OFF_NUM_1=3000
+COMMENT_POST_ONE_OFF_INTEGRAL_1=200
+COMMENT_POST_ONE_OFF_NUM_2=5000
+COMMENT_POST_ONE_OFF_INTEGRAL_2=500
