--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -7,7 +7,7 @@ SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=GBK
 SMS_USER_NAME=uyoung
 SMS_USER_PWD=nj123456
-SMS_CHECK_CODE_TEMPLATE = 尊敬的用户，您的验证码为：%s，请及时输入。【集合】
+SMS_CHECK_CODE_TEMPLATE = 尊敬的用户，您的验证码为：%s，请及时输入。【聚合】
 
 #\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
