--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -17,3 +17,5 @@ LOGIN_FAILED_NEED_VERIFY_CODE=3
 PASS_AUDIT=10
 HOT_POST_NUM=20
 CUT_PIC_TEM_DIR=/tmp/cover
+
+SPECIAL_USERS=18252715800,15651700293,13770868466,18551769202,18061674062,13912996496
