增加一个免审核号码

--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -7,15 +7,15 @@ SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=GBK
 SMS_USER_NAME=uyoung
 SMS_USER_PWD=nj123456
-SMS_CHECK_CODE_TEMPLATE = 尊敬的用户，您的验证码为：%s，请及时输入。【聚合】
+SMS_CHECK_CODE_TEMPLATE = \u5c0a\u656c\u7684\u7528\u6237\uff0c\u60a8\u7684\u9a8c\u8bc1\u7801\u4e3a\uff1a%s\uff0c\u8bf7\u53ca\u65f6\u8f93\u5165\u3002\u3010\u805a\u5408\u3011
 
 #\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
-DEFAULT_NICK_NAME=店小二
+DEFAULT_NICK_NAME=\u5e97\u5c0f\u4e8c
 LOGIN_FAILED_NEED_VERIFY_CODE=3
 
 PASS_AUDIT=10
 HOT_POST_NUM=20
 CUT_PIC_TEM_DIR=/tmp/cover
 
-SPECIAL_USERS=18252715800,15651700293,13770868466,18551769202,18061674062,13912996496
+SPECIAL_USERS=18252715800,15651700293,13770868466,18551769202,18061674062,13912996496,18061674062
