--- a/service/campus/campus.rest/src/main/resources/config.properties
+++ b/service/campus/campus.rest/src/main/resources/config.properties
@@ -7,15 +7,15 @@ SMS_URL=http://218.78.215.207/p_itf/dapi/send_long.php
 SMS_REQUEST_CHARSET=GBK
 SMS_USER_NAME=uyoung
 SMS_USER_PWD=nj123456
-SMS_CHECK_CODE_TEMPLATE = \u5c0a\u656c\u7684\u7528\u6237\uff0c\u60a8\u7684\u9a8c\u8bc1\u7801\u4e3a\uff1a%s\uff0c\u8bf7\u53ca\u65f6\u8f93\u5165\u3002\u3010\u805a\u5408\u3011
+SMS_CHECK_CODE_TEMPLATE = \u5C0A\u656C\u7684\u7528\u6237\uFF0C\u60A8\u7684\u9A8C\u8BC1\u7801\u4E3A\uFF1A%s\uFF0C\u8BF7\u53CA\u65F6\u8F93\u5165\u3002\u3010\u805A\u5408\u3011
 
 #\u9ed8\u8ba4\u7f16\u7801
 DEFAULT_CHARSET=UTF-8
-DEFAULT_NICK_NAME=\u5e97\u5c0f\u4e8c
+DEFAULT_NICK_NAME=\u5E97\u5C0F\u4E8C
 LOGIN_FAILED_NEED_VERIFY_CODE=3
 
 PASS_AUDIT=10
 HOT_POST_NUM=20
 CUT_PIC_TEM_DIR=/tmp/cover
 
-SPECIAL_USERS=18252715800,15651700293,13770868466,18551769202,18061674062,13912996496,18061674062,13851783747,15651700293,13645176391,13912996413
+SPECIAL_USERS=18252715800,15651700293,13770868466,18061674062,13912996496,18061674062,13851783747,15651700293,13645176391,13912996413
